# merriam_api_parser

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .sourcery.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: add-more-token-parsing.md
.github/workflows/: auto-update-precommit.yml  codecov.yml  run-pre-commit.yml  sourcery-refactor-pr.yml
data/: README.md  voluminous.json
data/json/: tokens.json
data/md/: pariah.md  penchant.md  piecemeal.md  voluminous.md
merriam_api/: formatter.py  io.py  parser.py
merriam_api_parser/: _io.py  _json_parser.py  _requset_resopnse.py  _text_formatter.py  _token_parser.py  json_parser.py  main.py  md_formatter.py  requset_resopnse.py  utility.py
merriam_api_parser/core/: _io.py  _json_parser.py  _requset_resopnse.py  _token_parser.py
merriam_api_parser/tests/: test_token_paser.py
src/: README.md  tokens.json
tests/: test_data.json  test_data.md  test_io.py  test_json_parser.py  test_token_paser.py  test_utility.py
