[project]
name = "merriam-api-parser"
version = "0.1.0"
description = "A parser for the Merriam-Webster API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Zhengbo Wang", email = "lw7205675@gmail.com" }]
dependencies = [
  "ruff == 0.0.262",
  "black == 0.2.0",
  "mypy == 1.2.0",
  "pylint == 2.17.4",
  "pytest == 7.3.1",
  "pytest-cov == 4.1.0",
  "requests == 2.28.2",
]
requires-python = ">=3.11"

[tool.ruff]
select = ["ALL"]
ignore = [
  # Will raise for untyped "self", this is not needed for the time being
  # https://github.com/charliermarsh/ruff/issues/1231#issuecomment-1350066198
  "ANN101",
]
line-length = 88
target-version = "py311"
fix = true
fixable = ["ALL"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"merriam_api_parser/tests/*" = [
  "S101", # use assert
  "D100", # public module missing docstring
  "D103", # public function missing docstring
]

[tool.black]
target-version = ['py311']
required-version = '23.3.0'
exclude = '''
(
  \.venv
  | \.git
  | \.data
)
'''

[tool.mypy]
mypy_path = "merriam_api_parser"
files = ['merriam_api_parser']
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "too-few-public-methods", # Uncessary for now
  "fixme",                  # Raise if has todo

  # False positive
  "unsubscriptable-object",
  "import-error",

  # Caught by ruff
  "line-too-long",
  "missing-function-docstring",
  "broad-except",
  "missing-module-docstring",
]

[tool.pytest.ini_options]
testpaths = ["merriam_api_parser/tests"]
addopts = "--verbose"
